--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -64,11 +64,11 @@ Supported regulations include:
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^4].
 
-4. Locate the Document Check box on the right and click **{{< fa check >}} Check Document**.
+4. Locate the Document Checker box on the right and click **{{< fa check >}} Check Document**.
 
 ### Select a regulation
 
-1. In the **{{< var validmind.checker >}}**, click **Select a regulation** and pick which one to check your document against:
+1. In the Document Checker modal, click **Select a regulation** and pick which one to check your document against:
 
    ![Select a regulation to check your document against](/guide/model-documentation/check-documents-for-compliance-select-regulation.png){fig-alt="A screenshot showing the Select a regulation dropdown in the checker" .screenshot}
 
