Customize VDV draft

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -9,6 +9,7 @@ listing:
     sort: false
     fields: [title, description]
     contents: 
+    - ../../templates/customize-virtual-document-validator.qmd
     - ../../about/overview-llm-features.qmd
 aliases: 
   - /guide/model-documentation/check-documents-for-compliance.html
@@ -22,7 +23,7 @@ Use the {{< var validmind.checker >}} to analyze your completed model documentat
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-25-ns .pt3 .pr4}
-![Document checker](/about/overview-llm-features-check-document.png){fig-alt="A screenshot showing the LLM feature for checking documentation that can be accessed with the Check Document button" .screenshot}
+![{{< var vm.checker >}}](/about/overview-llm-features-check-document.png){fig-alt="A screenshot showing the LLM feature for checking documentation that can be accessed with the Check Document button" .screenshot}
 
 :::
 
@@ -37,9 +38,9 @@ The {{< var validmind.checker >}} is a compliance tool that reviews technical do
 
 ::::
 
-As a compliance tool, the {{< var vm.checker >}} is most useful when your model documentation is sufficiently complete and you are preparing models for regulatory submission or internal audit, as it helps reduce manual review effort and improve quality assurance. 
+As a compliance tool, the {{< var vm.checker >}} is most useful when your model documentation is sufficiently complete and you are preparing models for regulatory submission or internal audit, as it helps reduce manual review effort and improve quality assurance.
 
-Supported regulations include:
+By default, {{< var vm.product >}} supports the following regulations:
 
 - Federal Reserve Supervisory Letter SR 11-7 (United States)
 - Bank of England Prudential Regulation Authority (PRA) Supervisory Statement SS1/23 (United Kingdom)
@@ -64,11 +65,11 @@ Supported regulations include:
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^4].
 
-4. Locate the Document Checker box on the right and click **{{< fa check >}} Check Document**.
+4. Locate the {{< var vm.checker >}} box on the right and click **{{< fa check >}} Check Document**.
 
 ### Select a regulation
 
-1. In the Document Checker modal, click **Select a regulation** and pick which one to check your document against:
+1. In the {{< var vm.checker >}} modal, click **Select a regulation** and pick which one to check your document against:
 
    ![Select a regulation to check your document against](/guide/model-documentation/check-documents-for-compliance-select-regulation.png){fig-alt="A screenshot showing the Select a regulation dropdown in the checker" .screenshot}
 
