Edits: Check documentation for compliance

--- a/site/guide/templates/customize-virtual-document-validator.qmd
+++ b/site/guide/templates/customize-virtual-document-validator.qmd
@@ -12,7 +12,7 @@ listing:
     - ../../model-documentation/check-documentation-for-compliance.qmd
 ---
 
-Manage the regulations and policies and their attached assessments available for selection when you use the {{< var vm.product >}} {{< var validmind.checker >}}.
+Manage the regulations and policies and their attached assessments available when you use the {{< var vm.product >}} {{< var validmind.checker >}}.
 
 ::: {.attn}
 
@@ -77,8 +77,8 @@ Regulations and policies can contain multiple assessments. Assessments are compo
 
 To manage an assessment:
 
-1. Add or clone an assessment
-2. Add or edit assessment questions
+1. [Add or clone an assessment](#add-or-clone-assessments)
+2. [Add or edit assessment questions](#add-or-edit-assessment-questions)
 
 ### Add or clone assessments
 
