--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -15,7 +15,7 @@ aliases:
   - /guide/model-documentation/check-documents-for-compliance.html
 ---
 
-Use the {{< var validmind.checker >}} to analyze your completed model documentation by comparing it against regulatory standards. 
+Use the {{< var validmind.checker >}} to analyze your completed model documentation by comparing it against regulatory standards.
 
 ## What is the {{< var validmind.checker >}}?
 
@@ -69,19 +69,19 @@ By default, {{< var vm.product >}} supports the following regulations:
 
 ### Select a regulation
 
-1. In the {{< var vm.checker >}} modal, click **Select a regulation** and pick which one to check your document against:
+1. In the {{< var vm.checker >}} modal, select a **[regulation]{.smallcaps}** and an associated **[assessment]{.smallcaps}** from the drop-down menus to to check your document against:
 
-   ![Select a regulation to check your document against](/guide/model-documentation/check-documents-for-compliance-select-regulation.png){fig-alt="A screenshot showing the Select a regulation dropdown in the checker" .screenshot}
+   ![Example **[regulation]{.smallcaps}** and **[assessment]{.smallcaps}** selected to check a document against](/guide/model-documentation/vdv-select-regulation-and-assessment.png){fig-alt="A screenshot showing the REGULATION and ASSESSMENT dropdowns in the Document Checker" .screenshot}
 
-   A list of regulation-based questions appears that you can review and expand.
-   
+   A list of regulation-based questions appears for your review.
+
 2. Scroll to the bottom and click **Check Document**.
 
-The system analyzes your documentation, identifies gaps, and generates recommendations for specific questions that you can review in the next step.
+The {{< var validmind.checker >}} analyzes your documentation, identifies gaps, and generates recommendations for specific questions that you review in the next step.
 
 ### Review the findings
 
-1. After the {{< var validmind.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings:
+1. After the {{< var vm.checker >}} has completed its analysis, expand individual questions or click **Expand All** to look through the findings:
 
 ::: {.pl4}
 [Gap Identified]{.bubble .red-b .red-bg} — A question that is not addressed and requires attention.<br>
@@ -94,11 +94,11 @@ The system analyzes your documentation, identifies gaps, and generates recommend
      - **Finding** — An analysis of how the documentation currently addresses the question
      - **Recommendation** — If suggested, guidance on how to revise the documentation to better address the question
 
-   ![Sample question that is not addressed](/guide/model-documentation/check-documents-for-compliance-gap-identified.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
+   ![Sample question that is not addressed](/guide/model-documentation/vdv-gap-identified.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
 
-   ![Sample question that is partially addressed](/guide/model-documentation/check-documents-for-compliance-partial-gap.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
+   ![Sample question that is partially addressed](/guide/model-documentation/vdv-partial-gap.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'Gap identified' with a recommendation to add a policy paragraph." .screenshot}
 
-   ![Sample question that is fully addressed](/guide/model-documentation/check-documents-for-compliance-no-significant-gaps.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'No significant gaps.' with a recommendation to add a policy paragraph." .screenshot}
+   ![Sample question that is fully addressed](/guide/model-documentation/vdv-no-significant-gaps.png){fig-alt="A screenshot showing the question 'Is the documentation sufficient to allow an expert to adjust parameters?' and the finding 'No significant gaps.' with a recommendation to add a policy paragraph." .screenshot}
 
 Use the feedback provided by the {{< var validmind.checker >}} to review the appropriate sections of your documentation and decide what revisions should be made. Or, if you have run the {{< var vm.checker >}} before and were just checking that all documentation issues have been addressed, submit your model for validation.
 
