--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -42,28 +42,28 @@ As a compliance tool, the {{< var vm.checker >}} is most useful when your model 
 
 By default, {{< var vm.product >}} supports the following regulations:
 
-- Federal Reserve Supervisory Letter SR 11-7 (United States)
-- Bank of England Prudential Regulation Authority (PRA) Supervisory Statement SS1/23 (United Kingdom)
-- Office of the Superintendent of Financial Institutions (OSFI) Guideline E-23 (Canada)
-- European Union Artificial Intelligence Act (Regulation (EU) 2024/1689, EU AI Act)
+- Federal Reserve Supervisory Letter SR 11-7 (United States)[^1]
+- Bank of England Prudential Regulation Authority (PRA) Supervisory Statement SS1/23 (United Kingdom)[^2]
+- Office of the Superintendent of Financial Institutions (OSFI) Guideline E-23 (Canada)[^3]
+- European Union Artificial Intelligence Act (Regulation (EU) 2024/1689, EU AI Act)[^4]
 
 ::: {.attn}
 
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] The model you are documenting is registered in the model inventory.[^1]
+- [x] The model you are documenting is registered in the model inventory.[^5]
 - [x] The model must have sufficiently complete documentation that can be checked against a regulatory standard.
-- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^2]
+- [x] You are a [{{< fa code >}} Developer]{.bubble} or [{{< fa circle-check >}} Validator]{.bubble}, or assigned another role with sufficient permissions to perform the tasks in this guide.[^6]
 :::
 
 ## Check model documentation
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^3]
+2. Select a model or find your model by applying a filter or searching for it.[^7]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^4].
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.[^8].
 
 4. Locate the {{< var vm.checker >}} box on the right and click **{{< fa check >}} Check Document**.
 
@@ -108,10 +108,18 @@ Use the feedback provided by the {{< var validmind.checker >}} to review the app
 :::
 <!-- FOOTNOTES -->
 
-[^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+[^1]: [SR 11-7](https://www.federalreserve.gov/supervisionreg/srletters/sr1107.htm)
 
-[^2]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^2]: [SS1/23](https://www.bankofengland.co.uk/prudential-regulation/publication/2023/may/model-risk-management-principles-for-banks-ss)
 
-[^3]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^3]: [Guideline E-23](https://www.osfi-bsif.gc.ca/en/guidance/guidance-library/guideline-e-23-model-risk-management-2027)
 
-[^4]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+[^4]: [Regulation (EU) 2024/1689](https://eur-lex.europa.eu/eli/reg/2024/1689/oj/eng)
+
+[^5]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+
+[^6]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+
+[^8]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
