--- a/site/guide/templates/customize-virtual-document-validator.qmd
+++ b/site/guide/templates/customize-virtual-document-validator.qmd
@@ -10,6 +10,7 @@ listing:
     fields: [title, description]
     contents:
     - ../../model-documentation/check-documentation-for-compliance.qmd
+    - ../../about/overview-llm-features.qmd
 ---
 
 Manage the regulations and policies and their attached assessments available when you use the {{< var vm.product >}} {{< var validmind.checker >}}.
