Quick UI updates

--- a/site/guide/model-documentation/check-documentation-for-compliance.qmd
+++ b/site/guide/model-documentation/check-documentation-for-compliance.qmd
@@ -71,7 +71,7 @@ By default, {{< var vm.product >}} supports the following regulations:
 
 1. In the {{< var vm.checker >}} modal, select a **[regulation]{.smallcaps}** and an associated **[assessment]{.smallcaps}** from the drop-down menus to to check your document against:
 
-   ![Example **[regulation]{.smallcaps}** and **[assessment]{.smallcaps}** selected to check a document against](/guide/model-documentation/vdv-select-regulation-and-assessment.png){fig-alt="A screenshot showing the REGULATION and ASSESSMENT dropdowns in the Document Checker" .screenshot}
+   ![Example **[regulation or policy]{.smallcaps}** and **[assessment]{.smallcaps}** selected to check a document against](/guide/model-documentation/vdv-selection.png){fig-alt="A screenshot showing the REGULATION OR POLICY and ASSESSMENT dropdowns in the Document Checker" .screenshot}
 
    A list of regulation-based questions appears for your review.
 
