--- a/site/guide/templates/customize-virtual-document-validator.qmd
+++ b/site/guide/templates/customize-virtual-document-validator.qmd
@@ -138,11 +138,17 @@ d. Once cloned, add or edit the assessment questions.[^5]
 
 #### Add asssessment questions
 
-a. Click **{{< fa plus >}} Add Question** to create a new question.
+a. Click **{{< fa plus >}} Add Question(s)** to create a new question.
 
-b. Enter in the **[question text]{.smallcaps}**.
+b. Enter in the **[questions]{.smallcaps}**:
 
-c. Click **Add Question** to insert the question into the assessment.
+    - Each line without a break (enter) is considered one complete question.[^6]
+    - To add a separate question, press enter to start a new line.
+    - Questions will be added in the order they appear.
+
+    As you enter questions, the count of questions will update.
+
+c. Click **Add # Question(s)** to insert questions into the assessment.
 
 #### Edit assessment questions
 
@@ -174,3 +180,6 @@ c. Click **Update Question** to save your changes.
 [^4]: [Add or edit assessment questions](#add-or-edit-assessment-questions)
 
 [^5]: [Add or edit assessment questions](#add-or-edit-assessment-questions)
+
+[^6]: Empty lines will be ignored.
+
