--- a/site/guide/templates/working-with-model-documents.qmd
+++ b/site/guide/templates/working-with-model-documents.qmd
@@ -4,16 +4,18 @@ date: last-modified
 listing:
   - id: model-documents
     type: grid
-    grid-columns: 2
+    grid-columns: 3
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
       - manage-document-types.qmd
       - manage-model-documents.qmd
+      - customize-virtual-document-validator.qmd
 ---
 
-Set up document types, categories of model-related content, for use on models across your organization. By default, {{< var vm.product >}} provides document types and out-of-the-box templates for model documentation, validation reports, and ongoing monitoring reports.
+Set up document types, categories of model-related content, for use on models across your organization, and the regulations and policies that oversee your documents within the {{< var validmind.platform >}}.
+
 
 :::{#model-documents}
 :::
