--- a/site/guide/model-workflows/_conditional-requirements.qmd
+++ b/site/guide/model-workflows/_conditional-requirements.qmd
@@ -52,8 +52,12 @@ Select from either **Model Stakeholder Types**^[[Manage model stakeholder types]
 Select when you would like to [resume workflow:]{.smallcaps}
 
 - **After Time Interval** — Set the **[wait duration]{.smallcaps}** in minutes, hours, or days.
-- **At Specified Date** — Set the **[wait until]{.smallcaps}** a specific timestamp.
+- **At Specified Date** — Set a time to **[wait until]{.smallcaps}** as defined by a specific timestamp.
 - **At Specified Date on Model Field** — Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
+- **Time Delta from Specified Date on Model Field** —
+    a. Set the **[model field]{.smallcaps}**^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)] with a valid `Date` or `Date Time` type model inventory field that defines the specific timestamp on a per model basis.
+    b. Select a **[time delta direction]{.smallcaps}** relative to your selected field.
+    c. Enter in a **[wait duration]{.smallcaps}** in minutes, hours, days, or months for the delta.
 
 :::
 
