Add API reference links in footer and dropdown

--- a/site/developer/model-testing/testing-overview.qmd
+++ b/site/developer/model-testing/testing-overview.qmd
@@ -152,4 +152,4 @@ Absolutely! {{< var vm.product >}} supports custom tests that you develop yourse
 
 ## {{< var validmind.api >}} reference
 
-[{{< var validmind.developer >}} API Reference](/validmind/validmind.qmd){target="_blank" .button .button-green}
+[{{< var validmind.developer >}} Python API Reference](/validmind/validmind.qmd){target="_blank" .button .button-green}
