--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -23,7 +23,31 @@ Manage the fields that appear on all finding types logged on your models. Choose
 
     Here you can edit existing finding fields, or add a new one:
 
-{{< include /guide/model-inventory/_add-edit-inventory-fields.qmd >}}
+::: {.panel-tabset}
+
+#### Add finding fields
+
+To add a new finding field, click **{{< fa plus >}} Add Field**:
+
+a. Finding fields require a [type]{.smallcaps},[^2] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^3]
+
+    - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
+    - (Optional) You can also assign a field to a group.[^4]
+    - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^5]
+
+a. When you are satisfied with the setup of your finding field, click **Save**.
+
+#### Edit finding fields
+
+To edit an existing finding field:
+
+a. Hover over the finding field you would like to edit.
+
+a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
+
+a. Make your desired changes to your finding field, then click **Save**.
+
+:::
 
 #### Finding field types
 <span id="field-types"></span>
@@ -118,8 +142,8 @@ c. Click **Search** to narrow down your results by your entered keywords.
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
-    - **[types]{.smallcaps}** — What type of field it is.[^2]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^3]
+    - **[types]{.smallcaps}** — What type of field it is.[^6]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^7]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
@@ -149,12 +173,29 @@ To group finding fields, first create a finding field group:
 5. After you confirm, the field will be removed.
 
 
-
-
 <!-- FOOTNOTES -->
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
 [^2]: [Finding field types](#field-types)
 
-[^3]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^3]: [Manage finding types](manage-finding-types.qmd)
+
+[^4]: [Add groups](#field-groups)
+
+[^5]:
+
+    ::: {.callout title="Leave this field blank to leave permissions as default."}
+    - By default, only the <br>[{{< fa hand >}} Customer Admin]{.bubble} role has write access.
+    - All other users will have read-only access unless specified under the **[write permissions]{.smallcaps}** as a model stakeholder type.
+
+    ::: {.tc}
+    [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+    :::
+
+    :::
+
+[^6]: [Finding field types](#field-types)
+
+[^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
