Editing UI wording

--- a/site/faq/faq-inventory.qmd
+++ b/site/faq/faq-inventory.qmd
@@ -28,7 +28,7 @@ By default, the [{{< fa code >}} Developer]{.bubble} role[^2] has sufficient per
 
 ## Are model registration questionnaires customizable?
 
-- Yes, along with default fields provided by {{< var vm.product >}} as part of your basic model information, you can add additional model information and make these custom fields required on registration.[^3]
+- Yes, along with default fields provided by {{< var vm.product >}} as part of your basic model information, you can add additional model information and make these custom fields required when creating models.[^3]
 - You can modify these custom fields as needed and on an ongoing basis.
 
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has sufficient permissions to manage model inventory fields.
