--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -64,7 +64,7 @@ c. Click **Search** to narrow down your results by your entered keywords.
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
-    - **[required on registration]{.smallcaps}** — Whether or not the field was set up as required on model registration.
+    - **[required when creating models]{.smallcaps}** — Whether or not the field was set up as required on model registration.
     - **[types]{.smallcaps}** — What type of field it is.[^2]
     - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^3]
     - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^4]
