--- a/site/guide/model-inventory/register-models-in-inventory.qmd
+++ b/site/guide/model-inventory/register-models-in-inventory.qmd
@@ -29,7 +29,7 @@ Register models with {{< var vm.product >}} as the first step towards streamlini
 
 #### Basic Model Information
 
-If no additional fields are required on registration for your models:
+If no additional fields are required on creation for your models:
 
 a.  Provide the information outlined in the basic model information fields table below.
 
