--- a/site/releases/2024/2024-mar-27/highlights.qmd
+++ b/site/releases/2024/2024-mar-27/highlights.qmd
@@ -164,7 +164,7 @@ When registering new models in the model inventory, you can now designate additi
 
 ::: {.w-40-ns}
 
-You can specify the inventory fields that are [required on registration]{.smallcaps} under **{{< fa gear >}} Settings** > **Model Inventory Fields**.
+You can specify the inventory fields that are [required when creating models]{.smallcaps} under **{{< fa gear >}} Settings** > **Model Inventory Fields**.
 
 [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd){.button .button-green}
 
