--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -20,6 +20,8 @@ To edit an existing inventory field:
 
 a. Hover over the inventory field you would like to edit.
 
+    Expand any inventory field group to see more fields.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
+
 a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
 a. Make your desired changes to your inventory field, then click **Save**.
