--- a/site/guide/model-inventory/manage-model-inventory-fields.qmd
+++ b/site/guide/model-inventory/manage-model-inventory-fields.qmd
@@ -59,17 +59,20 @@ b. Select whether to search in the **Title** or **Description**.
 
 c. Click **Search** to narrow down your results by your entered keywords.
 
+    Expand any inventory field group to see more fields.[^2]
 
 #### Filter fields
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
     - **[required when creating models]{.smallcaps}** — Whether or not the field was set up as required on model registration.
-    - **[types]{.smallcaps}** — What type of field it is.[^2]
-    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^3]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^4]
+    - **[types]{.smallcaps}** — What type of field it is.[^3]
+    - **[workflow triggered by field]{.smallcaps}** — What workflows are initiated when this field is edited.[^4]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^5]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
+
+    Expand any inventory field group to see more fields.[^6]
 
 :::
 
@@ -101,10 +104,12 @@ To group model inventory fields, first create an inventory field group:
 
 [^1]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^2]: [Inventory field types](#field-types)
+[^2]: [Add inventory field groups](#add-inventory-field-groups)
 
-[^3]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
+[^3]: [Inventory field types](#field-types)
 
-[^4]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^4]: [Configure model workflows](/guide/model-workflows/configure-model-workflows.qmd)
 
+[^5]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
+[^6]: [Add inventory field groups](#add-inventory-field-groups)
