--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -43,6 +43,8 @@ To edit an existing finding field:
 
 a. Hover over the finding field you would like to edit.
 
+    Expand any inventory field group to see more fields.[^6]
+
 a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
 a. Make your desired changes to your finding field, then click **Save**.
@@ -137,16 +139,18 @@ b. Select whether to search in the **Title** or **Description**.
 
 c. Click **Search** to narrow down your results by your entered keywords.
 
+    Expand any inventory field group to see more fields.[^7]
 
 #### Filter fields
 
 a. Click **{{< fa filter >}} Filter** to filter fields by any of the following criteria:
 
-    - **[types]{.smallcaps}** — What type of field it is.[^6]
-    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^7]
+    - **[types]{.smallcaps}** — What type of field it is.[^8]
+    - **[write permissions]{.smallcaps}** — Which model stakeholder types have permissions to edit this field.[^9]
 
 b. Click **Apply Filters** to narrow down your results by your configured criteria.
 
+    Expand any inventory field group to see more fields.[^10]
 :::
 
 ## Add finding field groups
@@ -196,6 +200,12 @@ To group finding fields, first create a finding field group:
 
     :::
 
-[^6]: [Finding field types](#field-types)
+[^6]: [Add finding field groups](#add-finding-field-groups)
 
-[^7]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^7]: [Add finding field groups](#add-finding-field-groups)
+
+[^8]: [Finding field types](#field-types)
+
+[^9]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^10]: [Add finding field groups](#add-finding-field-groups)
