--- a/site/guide/access/register-with-validmind.qmd
+++ b/site/guide/access/register-with-validmind.qmd
@@ -26,7 +26,7 @@ To use the platform, your organization must already have a {{< var vm.product >}
 
 :::
 
-## Accepting an invite 
+## Accept invitations
 
 1. Check the email inbox for the address you provided your organization to be associated with {{< var vm.product >}} for the following email:
 
