--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -58,7 +58,7 @@ a. Select **{{< fa pencil >}} Details** to edit a **[dashboard name]{.smallcaps}
 b. Make your edits then click **Save Changes** to apply your adjustments.
 
 
-#### Remove a dashboard
+#### Remove dashboards
 
 a. To remove a dashboard, select **{{< fa trash-can >}} Delete**.
 
