--- a/site/guide/configuration/manage-roles.qmd
+++ b/site/guide/configuration/manage-roles.qmd
@@ -38,7 +38,7 @@ Please note that the [{{< fa hand >}} Customer Admin]{.bubble} role has the high
 
 ::: {.panel-tabset}
 
-#### Add role to user
+#### Add roles to users
 
 a. Click **{{< fa plus >}}** to open the Assign Roles menu for that user.
 
@@ -46,7 +46,7 @@ a. Click **{{< fa plus >}}** next to the role for each role to be assigned.
 
 a. Click **{{< fa puzzle-piece >}} Assign Roles to User** to save changes.
 
-#### Delete role from user
+#### Delete roles from users
 
 a. Click **{{< fa x >}}** to delete a role from a user.
 
