--- a/site/guide/configuration/managing-your-organization.qmd
+++ b/site/guide/configuration/managing-your-organization.qmd
@@ -38,7 +38,7 @@ You will see the option to switch between organizations only if you belong to mo
     - Once selected, this will become your active organization. 
     - Your active organization is displayed under your name and roles in the left sidebar.
 
-## Change organization name
+## Change names of organizations
 
 ::: {.callout title="To change your organization's name, you must have sufficient organization permissions."}
 By default, the [{{< fa hand >}} Customer Admin]{.bubble} role has these permissions.[^1]
