--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -22,7 +22,7 @@ Archive models within the model inventory when they are decommissioned or delete
 
 :::
 
-## Change model stage
+## Change model stages
 
 ::: {.callout}
 ##  Instead of manually modifying your models' stages,[^4] we recommend manipulating stages via customized workflows.[^5]
