--- a/site/guide/model-inventory/customize-model-inventory-layout.qmd
+++ b/site/guide/model-inventory/customize-model-inventory-layout.qmd
@@ -62,7 +62,7 @@ Saved views are unique to you and do not display for other users in your organiz
 
 ::: {.panel-tabset}
 
-#### Save an inventory view
+#### Save inventory views
 
 You can save custom table configurations as a view to reapply at any time:
 
@@ -72,7 +72,7 @@ You can save custom table configurations as a view to reapply at any time:
 
 {{< include _save-layout-view.qmd >}}
 
-#### Edit or remove saved inventory view
+#### Edit or remove saved inventory views
 
 ::: {.callout-important}
 Deletion of saved views is permanent.
