--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -25,11 +25,11 @@ Add findings at the model or documentation section level, update your findings t
 
 ::: {.panel-tabset}
 
-#### Add finding via overview
+#### Add findings via overview
 
 {{< include _add-finding-via-overview.qmd >}}
 
-#### Add finding via section
+#### Add findings via section
 
 {{< include _add-finding-via-section.qmd >}}
 
