--- a/site/guide/model-validation/customize-model-findings-layouts.qmd
+++ b/site/guide/model-validation/customize-model-findings-layouts.qmd
@@ -47,7 +47,7 @@ Saved views are unique to you and do not display for other users in your organiz
 
 ::: {.panel-tabset}
 
-#### Save a findings view
+#### Save findings views
 
 You can save custom findings configuration as a view to reapply at any time for each finding type:
 
@@ -57,7 +57,7 @@ You can save custom findings configuration as a view to reapply at any time for 
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
-#### Edit or remove saved findings view
+#### Edit or remove saved findings views
 
 ::: {.callout-important}
 Deletion of saved views is permanent.
