--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -22,7 +22,7 @@ Review workflows associated with your models, and initiate or abort workflows co
 
 {{< include _review-active-workflows.qmd >}}
 
-### Review workflow history
+### Review workflow histories
 
 {{< include /guide/model-workflows/_review-workflow-history.qmd >}}
 
