--- a/site/guide/reporting/manage-custom-reports.qmd
+++ b/site/guide/reporting/manage-custom-reports.qmd
@@ -107,14 +107,14 @@ You can either delete a entire custom analytics page, or remove a single custom 
 
 ::: {.panel-tabset}
 
-#### Delete an analytics page
+#### Delete analytics pages
 
 a. Select **{{< fa trash-can >}} Delete**.
 
 b. After you confirm, the page will be permanently removed.
 
 
-#### Delete a visualization
+#### Delete visualizations
 
 a. Hover over the visualization you'd like to remove.
 
