--- a/site/guide/templates/customize-document-templates.qmd
+++ b/site/guide/templates/customize-document-templates.qmd
@@ -27,7 +27,7 @@ Check the [document template]{.smallcaps} section[^3] in the right sidebar.
 
 :::
 
-## Edit template outline
+## Edit template outlines
 
 {{< include _customize-document-templates.qmd >}}
 
@@ -37,7 +37,7 @@ Check the [document template]{.smallcaps} section[^3] in the right sidebar.
 To add guidelines to your template, edit the YAML template directly.
 :::
 
-## Edit YAML template 
+## Edit YAML templates
 
 1. In the left sidebar, click **{{< fa gear >}} Settings**. 
 
@@ -163,7 +163,7 @@ a:hover {
 
 :::
 
-## Duplicate template
+## Duplicate templates
 
 {{< include /guide/templates/_duplicate-template.qmd >}}
 
