--- a/site/guide/model-validation/manage-model-finding-fields.qmd
+++ b/site/guide/model-validation/manage-model-finding-fields.qmd
@@ -31,7 +31,7 @@ To add a new finding field, click **{{< fa plus >}} Add Field**:
 
 a. Finding fields require a [type]{.smallcaps},[^2] a [name]{.smallcaps}, a [description]{.smallcaps} and a [finding type]{.smallcaps}.[^3]
 
-    - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
+    - (Optional) You can also choose to indicate that a field is **[required when creating findings]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.[^4]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^5]
 
