docs: Updated "Manage model finding fields" (#958)
* Edit: DElete model findings

* Edit: Manage model finding fields

* Editing UI wording

* Editing...

* Editing......

* Proofreading

* Edit

--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -25,11 +25,11 @@ Add findings at the model or documentation section level, update your findings t
 
 ::: {.panel-tabset}
 
-#### Add finding via overview
+#### Add findings via overview
 
 {{< include _add-finding-via-overview.qmd >}}
 
-#### Add finding via section
+#### Add findings via section
 
 {{< include _add-finding-via-section.qmd >}}
 
@@ -111,11 +111,9 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 1. Locate the finding you want to delete.[^12]
 
-2. On the finding's detail page, click **{{< fa trash-can>}} Delete Finding** in the right sidebar.
+2. On the finding's detail page, click **{{< fa trash-can>}} Delete {Finding Type}**[^13] in the right sidebar.
 
-3. After you confirm, the finding will be permanently deleted. 
-
-   ![Deleting a finding](delete-model-finding.gif){fig-alt="An animated gif demonstrating how to delete a finding" .screenshot}
+3. After you confirm, the finding will be permanently deleted.
 
 
 <!-- FOOTNOTES -->
@@ -143,3 +141,5 @@ If you logged a finding in error or otherwise no longer need to track that findi
 [^11]: [Link findings to reports](/guide/model-validation/assess-compliance.qmd#link-findings-to-reports)
 
 [^12]: [View and filter model findings](view-filter-model-findings.qmd)
+
+[^13]: [Manage finding types](manage-finding-types.qmd)
