--- a/site/guide/model-inventory/_add-edit-inventory-fields.qmd
+++ b/site/guide/model-inventory/_add-edit-inventory-fields.qmd
@@ -2,27 +2,29 @@
 
 ::: {.panel-tabset}
 
-#### Add field
+#### Add inventory fields
 
-To add a new field, click **{{< fa plus >}} Add Field**:
+To add a new inventory field, click **{{< fa plus >}} Add Field**:
 
-a. Fields require a [type]{.smallcaps},^[[Field types](#field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
+a. Inventory fields require a [type]{.smallcaps},^[[Field types](#field-types)] a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
-    - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
+    - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.[^field-groups]
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.[^edit-fields]
 
-a. When you are satisfied with the setup of your field, click **Save**.
+a. When you are satisfied with the setup of your inventory field, click **Save**.
 
-#### Edit field
+#### Edit inventory fields
 
-To edit an existing field:
+To edit an existing inventory field:
 
-a. Hover over the field you would like to edit.
+a. Hover over the inventory field you would like to edit.
+
+    Expand any inventory field group to see more fields.^[[Add inventory field groups](/guide/model-inventory/manage-model-inventory-fields.qmd#add-inventory-field-groups)]
 
 a. When the **{{< fa ellipsis-vertical >}}** appears under the Actions column, select **{{< fa pencil >}} Edit Details**.
 
-a. Make your desired changes to your field, then click **Save**.
+a. Make your desired changes to your inventory field, then click **Save**.
 
 :::
 
@@ -54,13 +56,13 @@ a. Make your desired changes to your field, then click **Save**.
     - Click **{{< fa plus >}} Add Field** to add a new field.
     - Hover over a field and select **{{< fa pencil >}} Edit** under the Actions column to edit that field.
 
-1. Fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
+1. Inventory fields require a [type]{.smallcaps}, a [name]{.smallcaps}, and a [description]{.smallcaps}.
 
-    - (Optional) You can also choose to indicate that a field is **[required on registration]{.smallcaps}**.
+    - (Optional) You can also choose to indicate that a field is **[required when creating models]{.smallcaps}**.
     - (Optional) You can also assign a field to a group.
     - Assign **[write permissions]{.smallcaps}** to allow granular access to editing this field gated by model stakeholder types.
 
-1. When you are satisfied with the setup of your field, click **Save**.
+1. When you are satisfied with the setup of your inventory field, click **Save**.
 
 ::::
 
