Edit: View document templates

--- a/site/guide/templates/_view-document-templates.qmd
+++ b/site/guide/templates/_view-document-templates.qmd
@@ -12,22 +12,47 @@ To review the existing templates available to your organization:
    - **Ongoing Monitoring**^[[Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)]
    - **Custom**^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-1. Select one of the available templates to view information about the template.[^template-info]
+   Displayed in list view is an overview of information for templates under that specific document type.
+
+1. Select one of the available templates to view detailed information about the template:[^template-info]
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-40-ns}
+
+**Right column:**
+
+- Template name
+- Template version (drop-down selection)
+- Template version owner
+- Version creation date
+- Version notes
+- Models using selected template version
+- Template outline
+:::
+
+::: {.w-40-ns}
+
+**Left column:**
+
+- Template type
+- Template description
+- Template owner
+- Template creation date
+- Models using that template and which versions
+
+:::
+
+::::
 
 
 <!-- FOOTNOTES -->
 
 [^template-info]:
 
-   - Template name
-   - Template version
-   - Template type
-   - Template description
-   - Template owner
-   - Models using that specific template version
-   - When that template was created
-   - Models using that template
-   - Template outline
+   - **Versions & outlines:** [Customize document templates](customize-document-templates.qmd#edit-template-outlines)
+   - **Types:** [Working with model documents](/guide/templates/working-with-model-documents.qmd)
+
 
 ::::
 
@@ -38,6 +63,6 @@ To review the existing templates available to your organization:
 
 1. Select one of the tabs for [the document type with the templates you want to view](/guide/templates/working-with-model-documents.qmd){target="blank"}.
 
-1. Select one of the available templates to view information about the template.
+1. Select one of the available templates to view detailed information about the template.
 
 ::::
